2010-04-10  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/ia64/aors_n.asm: Complete rewrite.
	* mpn/ia64/aorslsh1_n.asm: Likewise.

	* mpn/ia64/add_n_sub_n.asm: Misc cleanups.  Add slotting comments.

	* mpn/ia64/lshiftc.asm: New file.

	* mpn/x86_64/pentium4/gmp-mparam.h: No longer disable rsh1add_n and
	rsh1sub_n; instead disable rsblsh1_n, addlsh2_n, rsblsh2_n.

	* mpn/x86/divrem_2.asm: Use "orb" instead of "or" to work around
	Solaris assembler bug.
	* mpn/x86_64/mpn/x86_64/divrem_2.asm: Likewise.

	* mpn/x86/aors_n.asm: Use operand-less shift-by-1 insn form.
	* mpn/x86/pentium/aors_n.asm: Likewise.
	* mpn/x86_64/invert_limb.asm: Likewise.

	* mpn/x86_64/pentium4/aors_n.asm: Let non-nc code fall into nc code.

	* mpn/x86_64/pentium4/rsh1aors_n.asm: New file.

2010-03-25  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/ia64/add_n_sub_n.asm: New file.

	* mpn/generic/toom33_mul.c: Fix mpn_add_n_sub_n usage.
	* mpn/generic/toom3_sqr.c: Likewise.
	* mpn/generic/toom63_mul.c: Likewise.

	* mpn/generic/add_n_sub_n.c: Renamed from addsub_n.c.

2010-03-23  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/divrem_2.asm: Use mpn_invert_limb instead of div insn.

	* mpn/ia64/aorslshC_n.asm: New file, generalised from last iteration of
	aorslsh1_n.asm.
	* mpn/ia64/aorslsh1_n.asm: Use aorslshC_n.asm.
	* mpn/ia64/aorslsh1_n.asm: New file, use aorslshC_n.asm.

2010-03-20  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/powerpc64/mode64/invert_limb.asm: Rewrite to exploit cancellation
	in the Newton iteration.

2010-03-20 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/toom_interpolate_8pts.c: Use mpn_sublsh2_n.

2010-03-20  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/powerpc64/mode64/aorslshC_n.asm: New file, generalised from
	last iteration of aorslsh1_n.asm.
	* mpn/powerpc64/mode64/aorslsh1_n.asm: Use aorslshC_n.asm.
	* mpn/powerpc64/mode64/aorslsh1_n.asm: New file, use aorslshC_n.asm.

2010-03-19  Torbjorn Granlund  <tege@gmplib.org>
